Configurando a geração da imagem customizada da JRE no processo de package.